Fixed Scroll Issues

--- a/src/styles/layout/page.scss
+++ b/src/styles/layout/page.scss
@@ -55,6 +55,9 @@
 
 .app-default {
 
+    height: 100vh !important;
+    overflow-y: hidden;
+
     &_app-footer{    
         max-height: 200px;    
         width: 100%;
