--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -13,13 +13,13 @@
     margin: 0;
     padding: 0;
     max-width: 100%;
-    height: 100%;
+    height: 100% !important;
+    max-height: 100% !important;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
     background: $base-dark;
     backdrop-filter: blur(4px);  
-    overflow-y: hidden !important;  
     
     &__left{  
         flex-grow: 1;      
@@ -27,13 +27,13 @@
         background-color: $base-light; 
         padding: 10px;
         max-width: 15%;
-        //height: 100%;
                
         
         &_sidenav{
             position: fixed;            
             display: flex;
             flex-flow: column wrap; 
+            height: 100% !important;
             
             
             /*&-same{
@@ -57,7 +57,8 @@
         border-radius: 8px;
         flex-grow: 3;
         max-width: 85%;
-        //height: 100%;
+        overflow-y: auto !important;
+        height: 100vh !important;
 
         &-top{
             border-radius: 8px;
