--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -11,7 +11,7 @@
         padding: 10px;
         border-radius: 2px;
                            
-        &:hover{
+        &:hover, &:focus{
             background-color: $primary;
             color: white;
             margin-top: 5px;  
