--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,8 +1,8 @@
-<div class="sidenav">            
-    <div class="sidenav-same demography" [routerLink]="['demography']" routerLinkActive="app-a_active">Demography</div>
-    <div class="sidenav-same features">Features</div>
-    <div class="sidenav-same report">Voting Report</div>
-    <div class="sidenav-same result" routerLink="results" routerLinkActive="app-a_active">Result</div>
-    <div class="sidenav-same settings" [routerLink]="['settings']" routerLinkActive="app-a_active">Settings</div>
+<div class="sidenav"> 
+    <div class="sidenav-same demography" routerLinkActive="app-a_active">Demography</div>           
+    <div class="sidenav-same demography" [routerLink]="['demography']" routerLinkActive="app-a_active">Vote Here</div>
+    <div class="sidenav-same report">Final Report</div>
+    <div class="sidenav-same result" routerLink="results" routerLinkActive="app-a_active">Monitor Result</div>
+    <div class="sidenav-same settings" [routerLink]="['settings']" routerLinkActive="app-a_active">Features</div>
     
 </div> 
