--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,16 +1,8 @@
 <div class="app-page">
     <div class="app-page__left">
         <div class="app-page__left_sidenav">
-            <app-sidenav></app-sidenav>
-            <!--<div class="app-page__left_sidenav-same demography" [routerLink]="['demography']" routerLinkActive="app-a_active">Demography</div>
-            <div class="app-page__left_sidenav-same features">Features</div>
-            <div class="app-page__left_sidenav-same report">Voting Report</div>
-            <div class="app-page__left_sidenav-same result" routerLink="results" routerLinkActive="app-a_active">Result</div>
-            <div class="app-page__left_sidenav-same settings" [routerLink]="['settings']" routerLinkActive="app-a_active">Settings</div>-->
-
-            
-        </div>       
-
+            <app-sidenav></app-sidenav>            
+        </div> 
     </div>
 
     <div class="app-page__center">        
@@ -18,11 +10,7 @@
             <router-outlet></router-outlet>            
         </div>
     </div>
-
-    <!--<div class="app-page__right">
-        <h1>Others</h1>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-    </div>-->
 </div>
+<!--Application Number 170488999807
+    
+Reference Number 2022735635-->
