--- a/src/app/pages/demography/demography.component.html
+++ b/src/app/pages/demography/demography.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
-    <div class="wrapper_action election" [routerLink]="['gubanitarian']"> Gubernatorial Election</div>
-    <div class="wrapper_action form" [routerLink]="['general']">General Election</div>
+    <!--<div class="wrapper_action election" [routerLink]="['gubanitarian']"> Gubernatorial Election</div>-->
+    <div class="wrapper_action form" [routerLink]="['general']">Cast Your Vote Here</div>
 </div>
 <div>
     <router-outlet></router-outlet>
