--- a/src/app/pages/demography/demography.component.scss
+++ b/src/app/pages/demography/demography.component.scss
@@ -4,13 +4,14 @@
     flex-direction: row;
 
     &_action{
-        width: 50%;
+        width: 100%;
         cursor: pointer;
         height: 100px;
-        margin: 20px;
+        margin: 40px;
         background-color: white;
         border-radius: 4px;
         text-align: center;
+        font-size: 30px;
         padding: 30px;
     }
 }
