--- a/src/app/pages/demography/demography.component.html
+++ b/src/app/pages/demography/demography.component.html
@@ -1,7 +1,6 @@
-<div class="wrapper">
-    <!--<div class="wrapper_action election" [routerLink]="['gubanitarian']"> Gubernatorial Election</div>-->
-    <div class="wrapper_action form" [routerLink]="['general']">Cast Your Vote Here</div>
-</div>
-<div>
-    <router-outlet></router-outlet>
+<div class="">
+    <div class="">
+        <app-gubanitarian></app-gubanitarian>
+    </div>
+    <div class=""></div>
 </div>
