--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,5 +1,5 @@
 <div class="app-page">
-    <div class="app-page__header"><h1>General Election Results</h1></div>
+    <div class="app-page__header"><h1>Ongoing Votes</h1></div>
     <div class="app-page__content">
         <app-result [candidate]="candidate$ | async"></app-result>
     </div>
