--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -1,7 +1,7 @@
-<div class="wrapper">
-    <!--<div class="wrapper_action election" [routerLink]="['gubanitarian']"> Gubernatorial Election</div>-->
-    <div class="wrapper_action form" [routerLink]="['general']">Cast Your Vote Here</div>
-</div>
+<div class="app-page" [routerLink]="['general']">
+    <h1>Cast Your Vote Here</h1>
 <div>
+
+<div class="container"> 
     <router-outlet></router-outlet>
 </div>
