--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,7 +6,7 @@
     flex: 1 100%;
 
     &__title {
-        font-size: 1.2em;
+        font-size: 1.5em;
         display: inline-flex;
         align-items: center;
         cursor: pointer;
@@ -21,4 +21,17 @@
 .app-a {
     margin-left: 1em;
     margin-right: 0;
+}
+
+@media screen and (max-width: 540px) {
+    .header{
+
+        &__title{
+            font-size: 0.8em;
+        }
+
+        &__navigation{
+            font-size: 0.6em;
+        }
+    }
 }
