--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="app-page">
-    <div class="app-page__left">
-        <div class="app-page__left_sidenav">
+    <div class="app-page__sidenav">
+        <div class="app-page__sidenav_sidenav">
             <app-sidenav></app-sidenav>            
         </div> 
     </div>
