--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -2,22 +2,40 @@
 
 
 .wrapper{
-    max-width: 100%;
+    max-width: 100vw;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px;
 
     &_action{
-        width: 50%;
+        width: 30vw;
         cursor: pointer;
-        height: 100px;
-        margin: 20px;
+        height: 10vh;
+        margin: 10px;
         background-color: white;
         border-radius: 4px;
         text-align: center;
-        padding: 30px;
+        padding: 20px;
     }
 }
 
-.wrapper-flow{
-    overflow: auto;
+@media screen and (min-width: 200px) and (max-width: 540px) {
+    .wrapper{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 5px;
+
+        &_action{
+            width: 30vw;
+            height: 5vh;
+            text-align: center;
+            padding: 5px;
+            font-size: 13px;
+        }
+    }
+
+    .container{
+        font-size: 12px;
+        padding: 5px;
+    }
 }
