--- a/src/app/pages/vote/vote.component.scss
+++ b/src/app/pages/vote/vote.component.scss
@@ -1,17 +1,21 @@
-.wrapper{
-    max-width: 100%;
-    display: flex;
-    flex-direction: row;
-
-    &_action{
-        width: 100%;
+.app-page{
         cursor: pointer;
         height: 100px;
-        margin: 40px;
         background-color: white;
         border-radius: 4px;
+        text-align: center;        
+        padding: 10px;
+}
+
+.container {
+    margin-top: 80px;
+}
+
+@media screen and (max-width: 540px) {
+    .app-page{
         text-align: center;
-        font-size: 30px;
-        padding: 30px;
-    }
+        height: 12vh;
+        font-size: 10px;
+        padding: 5px;
+    }    
 }
