--- a/src/app/pages/auth/component/registration/registration.component.html
+++ b/src/app/pages/auth/component/registration/registration.component.html
@@ -24,7 +24,7 @@
                     </div>
             
                     <div class="error" [class.error_active]="form.hasError('repeat')">
-                        Entered passwords don't match
+                        Passwords don't match
                     </div>
             
                     <div class="app-page__footer">
