--- a/src/app/pages/auth/component/registration/registration.component.scss
+++ b/src/app/pages/auth/component/registration/registration.component.scss
@@ -23,3 +23,15 @@
         opacity: 1;
     }
 }
+
+@media screen and (max-width: 540px) {
+    .app-auth{
+        &_left{
+            display: none;
+        }
+
+        &_right{
+            width: 100vw;
+        }
+    }
+}
