--- a/src/app/pages/auth/component/login/login.component.scss
+++ b/src/app/pages/auth/component/login/login.component.scss
@@ -1,11 +1,21 @@
 
 .app-page {
-    max-width: 500px;
-    max-height: 450px;
+    width: 100%;
+    height: 100%;
     background: #E5E5E5 ;
     position: relative;
     bottom: 30px;
-    margin-top: 20px;
+    margin-top: 20px;    
+}
 
-    
+@media screen and (max-width: 540px) {
+    .app-auth{
+        &_left{
+            display: none;
+        }
+
+        &_right{
+            width: 100vw;
+        }
+    }
 }
