--- a/src/app/pages/static/welcome/welcome.component.html
+++ b/src/app/pages/static/welcome/welcome.component.html
@@ -1,3 +1,8 @@
+
+<!--<div class="container">
+    
+</div>-->
+
 <div class="app-page">
     <div class="app-page__header">
         <h1>Welcome to Electoral</h1>
