--- a/src/app/pages/profile/display/display.component.scss
+++ b/src/app/pages/profile/display/display.component.scss
@@ -15,3 +15,12 @@
 
     }*/
 }
+
+@media screen and (max-width: 540px) {
+    .app-page {
+
+        &__content{
+            font-size: 12px;
+        }
+    }
+}
