--- a/src/app/pages/profile/form/form.component.scss
+++ b/src/app/pages/profile/form/form.component.scss
@@ -1,3 +1,12 @@
 .app-page{
     margin-top: 0;
 }
+
+@media screen and (max-width: 540px) {
+    .app-page {
+
+        &__content{
+            font-size: 12px;
+        }
+    }
+}
