--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -26,10 +26,11 @@
         margin: 5px;
 
         &_action{
+            margin: 3px;
             width: 30vw;
-            height: 5vh;
+            height: 6vh;
             text-align: center;
-            padding: 5px;
+            padding: 6px;
             font-size: 13px;
         }
     }
