--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,11 @@
-<div class="app-footer">
-    <div class="app-footer__right">
-        <div class="app-footer__right_r"></div>
+<div class="app-default__footer">
+    <!--<div class="app-default__footer_footer">
+        <div class="app-default__footer_footer__right">
+            <div class="app-default__footer_footer__right_r"></div>
+        </div>
+        <div class="app-default__footer_footer__left"></div>
+    </div>-->
+    <div class="app-default__footer_bottom">
+        Powered by StrictDesign
     </div>
-    <div class="app-footer__left"></div>
 </div>
