--- a/src/app/pages/static/welcome/welcome.component.html
+++ b/src/app/pages/static/welcome/welcome.component.html
@@ -1,15 +1,30 @@
 
-<!--<div class="container">
-    
-</div>-->
-
 <div class="app-page">
     <div class="app-page__header">
-        <h1>Welcome to Electoral</h1>
-        <p>Are you ready to get started?</p>
+        <!--<h1>Welcome to Electoral</h1>
+        <p>Are you ready to get started?</p>-->
+
+        <div class="app-page__header_imgs"></div>
+        <div class="app-page__header_banner">
+            Cheers to fair voting
+        </div>
+    </div>
+</div>
+
+
+<div class="main">
+    <div class="main_text">
+        <h1>Voting</h1>
+        <p>Made Easy For You</p>
     </div>
 
-    <div class="app-page__content">
-
+    <div class="main_cont">
+        <div class="main_cont_one main_cont_same"><span>Easy</span><br/> Access</div>
+        <div class="main_cont_two main_cont_same">
+            <span>Fast</span><br/> Access
+            
+        </div>
+        
+        <div class="main_cont_three main_cont_same"><span>Safe</span><br/> Access</div>
     </div>
 </div>
