--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,18 +1,34 @@
-.app-footer{   
-    height: 100px;
-    position: fixed;
+@import "src/styles/color";
 
-    &__right {
-        width: 50%;          
-        background: url('../../../assets/images/vote_3-removebg.png') left, url('../../../assets/images/VectorShape.png');   
-        background-repeat: no-repeat;
-        background-size: contain;       
-    }
+.app-default__footer {
+    
+    &_footer{   
+        
+        height: 200px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;       
+        
 
-    &__left {
-        width: 50%;       
-        background: url('../../../assets/images/Vector.png') right, url('../../../assets/images/vote-removebg.png');
-        background-repeat: no-repeat;  
-        background-size: contain; 
+        &__right {
+            width: 100%; 
+            height: 200px !important;
+            background: url('../../../assets/images/VectorShape.png');   
+            background-repeat: no-repeat; 
+            background-size: contain;   
+        }
+
+        &__left {            
+            width: 100%; 
+            height: 200px !important;
+            background: url('../../../assets/images/vote-removebg.png');
+            background-repeat: no-repeat;
+            background-size: contain; 
+        }
+    }  
+
+    &_bottom{
+        background-color: $on-base;
+        color: $base-light;
     }
 }
