--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -11,7 +11,7 @@
     background: $base-dark; 
     
     &__sidenav{     
-        background-color: $primary;
+        background-color: $primary-dark;
         color: $base-light;
 
         &_sidenav{       
