--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,10 +2,10 @@
     <div class="header__title" routerLink="/">Electoral</div>
     <div class="header__navigation">
 
-        <div *ngIf="!isAuthorized">
+        <!--<div *ngIf="!isAuthorized">
             <a class="app-a" routerLink="auth/login" routerLinkActive="app-a_active">Log In</a>
             <a class="app-a" routerLink="auth/registration" routerLinkActive="app-a_active">Registration</a>
-        </div>
+        </div>-->
 
         <div *ngIf="isAuthorized">
             <a class="app-a" routerLink="dashboard">Dashboard</a>
