--- a/src/app/pages/auth/component/login/login.component.html
+++ b/src/app/pages/auth/component/login/login.component.html
@@ -1,11 +1,12 @@
 
     <div class="app-auth">
-        <div class="app-auth_left"></div>
+        <!--<div class="app-auth_left"></div>-->
 
-        <div class="app-auth_right">
+        <!--<div class="app-auth_left">-->
            <div class="app-page">
             <div class="app-page__header">
                 <h1>SignIn</h1>
+                <p>Don't have an account yet? <a class="app-a" routerLink="/auth/registration">Register</a></p>
             </div>
             
             <form [formGroup]="form" (submit)="onSubmit()" (keyup.enter)="onSubmit()" novalidate autocomplete="off">
@@ -25,10 +26,10 @@
                     <app-button type="submit">Signin</app-button>
                 </div>
         
-            </form>
+            </form>            
            </div>
            <app-spinner *ngIf="loading$ | async"></app-spinner>
-        </div>
+        <!--</div>-->
         
     </div>
     
