--- a/src/app/shared/buttons/button/button.component.scss
+++ b/src/app/shared/buttons/button/button.component.scss
@@ -1,9 +1,10 @@
 @media screen and (max-width: 540px) {
     .app-button{
         text-align: center;
-        width: 12vw;
+        width: 18vw;
         height: 5vh;
-        font-size: 10px;
+        font-size: 12px;
+        font-weight: 500;
         padding: 5px;
     }    
 }
