--- a/src/app/pages/auth/component/login/login.component.scss
+++ b/src/app/pages/auth/component/login/login.component.scss
@@ -1,21 +1,22 @@
 
 .app-page {
-    width: 100%;
-    height: 100%;
-    background: #E5E5E5 ;
-    position: relative;
-    bottom: 30px;
-    margin-top: 20px;    
+    width: 30%;
+    height: 70vh;
+    background: #E5E5E5;
+    opacity: 0.92;  
 }
 
 @media screen and (max-width: 540px) {
-    .app-auth{
-        &_left{
-            display: none;
-        }
+    .app-page{
+        width: 80vw;
+        margin: 30px;
+        height: 80vh;
+    }
+}
 
-        &_right{
-            width: 100vw;
-        }
+@media screen and (min-width: 720px) and (max-width: 912px) {
+    .app-page{       
+        width: 50vw;
+        height: 50vh;
     }
 }
