--- a/src/styles/layout/page.scss
+++ b/src/styles/layout/page.scss
@@ -1,25 +1,25 @@
 .app-auth {
-    max-width: 900px;
-    max-height: 500px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    background: url('../../assets/images/vote_3-removebg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
     //padding: 32px;
-    display: flex;
-    justify-content: space-evenly;
+    //display: flex;
+    //justify-content: space-evenly;
     //width: 100%;
-        &_left{
-            background: url('../../assets/images/vote_3-removebg.png');
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: contain;
-            width: 50%;
+        /*&_left{
             
-        }
+            width: 100%;
+            
+        }*/
 
-        &_right{
+       /* &_right{
             background: rgba(129, 129, 129, 0.46);            
             width: 50%;
             padding: 40px;
-        }        
+        }   */     
 }
 
 .app-page {
@@ -62,8 +62,15 @@
     }
 }
 
+.app-land{
+    width: 100%;
+    height: 100vh;
+    background-color: #F2F0F0;
+    color: $on-base; 
+}
+
 .app-default {
-    //height: 100%;
+    height: 100%;
     overflow-y: hidden;
     margin: 0;
 
@@ -75,12 +82,5 @@
     &__content{
         margin: 0;
         padding: 0;
-    }
-
-    &__footer{    
-        width: 100% !important;
-        max-width: 100% !important;
-        text-align: center;      
-          
     }
 }
