--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <div class="sidenav"> 
-    <div class="sidenav-same demography" routerLink="demography" routerLinkActive="app-a_active">Demography</div>           
+    <div class="sidenav-same demography" routerLink="demography" routerLinkActive="app-a_active">Dashboard</div>           
     <div class="sidenav-same demography" [routerLink]="['vote']" routerLinkActive="app-a_active">Vote Here</div>
     <div class="sidenav-same result" routerLink="results" routerLinkActive="app-a_active">Monitor Result</div>
     <div class="sidenav-same report" routerLink="reports" routerLinkActive="app-a_active">Final Report</div>
