--- a/src/app/pages/demography/components/gubanitarian/gubanitarian.component.html
+++ b/src/app/pages/demography/components/gubanitarian/gubanitarian.component.html
@@ -1,1 +1,42 @@
-<p>gubanitarian works!</p>
+<div class="wrapper">
+    <div class="wrapper__president wrapper__same">
+        <div>
+            <p style="font-weight: 500;">Presidential</p>
+            <p>2 Parties</p>
+            <p>5 Candidates</p>
+        </div>
+        <div>
+            <p>Ongoing</p>
+        </div>
+    </div>
+    <div class="wrapper__governor wrapper__same">
+        <div>
+            <p style="font-weight: 500;">Governor</p>
+            <p>4 Parties</p>
+            <p>5 Candidates</p>
+        </div>
+        <div><p>Ongoing</p></div>
+    </div>
+    <div class="wrapper__local wrapper__same">
+        <div>
+            <p style="font-weight: 500;">Local Government</p>
+            <p>2 Parties</p>
+            <p>5 Candidates</p>
+        </div>
+        <div><p>Ongoing</p></div>
+    </div>
+    <div class="wrapper__senator wrapper__same">
+        <div>
+            <p style="font-weight: 500;">Senator</p>
+            <p>3 Parties</p>
+            <p>5 Candidates</p>
+        </div>
+        <div>
+            <p>Ongoing</p>
+        </div>
+    </div>
+</div>
+
+<div class="app-page">
+    ...Loading
+</div>
