--- a/src/app/pages/reports/components/report/report.component.html
+++ b/src/app/pages/reports/components/report/report.component.html
@@ -1,4 +1,4 @@
 <div class="app-page">
     New table
-    <app-table [dataSource]='Candidates'></app-table>
+    <app-table [dataSource]='candidate'></app-table>
 </div>
