--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -1,5 +1,5 @@
 <div class="app-page" [routerLink]="['general']">
-    <h1>Cast Your Vote Here</h1>
+    <h1>Click Here to Vote Now</h1>
 <div>
 
 <div class="container"> 
