--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -15,6 +15,7 @@
         height: 40px;
         padding: 10px;
         border-radius: 2px;
+        line-height: 30px;
                            
         &:hover, &:focus{
             background-color: $base-light;
