--- a/src/app/pages/results/component/result/result.component.html
+++ b/src/app/pages/results/component/result/result.component.html
@@ -1,7 +1,6 @@
-<div class="results" *ngFor="let cand of candidate">
+<div class="results" *ngFor="let cand of election?.candidate.itemInterfaces">
     <div class="results__content">
         <div>Candidate: {{cand.name}}</div>
         <div>Voted Count: {{cand.count}}</div>
-        <!--<div *ngIf="winner()">Status: {{Winner}}</div>-->
     </div>
 </div>
