--- a/src/app/pages/results/results.component.html
+++ b/src/app/pages/results/results.component.html
@@ -1,6 +1,6 @@
 <div class="app-page">
     <div class="app-page__header"><h1>Ongoing Votes</h1></div>
     <div class="app-page__content">
-        <app-result [candidate]="candidate$ | async"></app-result>
+        <app-result [election]="elections$ | async"></app-result>
     </div>
 </div>
