--- a/src/app/shared/controls/table/table.component.html
+++ b/src/app/shared/controls/table/table.component.html
@@ -1,38 +1,30 @@
-<div class="table">
-    <!--<div *ngFor="let item of dataSources">-->
-        <mat-table [dataSource]="dataSource" matSort>
+
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
             <ng-container matColumnDef="#">
-                <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
-                <mat-cell *matCellDef="let element; let i = index" data-label="#">{{i+1}}</mat-cell>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number">#</th>
+                <td mat-cell *matCellDef="let element; let i = index" data-label="#">{{i+1}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="Photo">
-                <mat-header-cell *matHeaderCellDef>Photo</mat-header-cell>
-                <mat-cell *matCelDef="let element">{{element.photoUrl}}</mat-cell>
+            <ng-container matColumnDef="photoUrl">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Photo</th>
+                <td mat-cell *matCellDef="let element">{{element.photoUrl}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="Name">
-                <mat-header-cell *matHeaderCellDef>Name</mat-header-cell>
-                <mat-cell *matCelDef="let element">{{element.name}}</mat-cell>
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let element">{{element.name}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="Party">
-                <mat-header-cell *matHeaderCellDef>Party</mat-header-cell>
-                <mat-cell *matCelDef="let element">{{element.party}}</mat-cell>
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
+                <td mat-cell *matCellDef="let element">{{element.position}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="Position">
-                <mat-header-cell *matHeaderCellDef>Position</mat-header-cell>
-                <mat-cell *matCelDef="let element">{{element.position}}</mat-cell>
+            <ng-container matColumnDef="count">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by count">Votes</th>
+                <td mat-cell *matCellDef="let element">{{element.count}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="VoteCount">
-                <mat-header-cell *matHeaderCellDef>Vote Count</mat-header-cell>
-                <mat-cell *mat-cell="let element">{{element.count}}</mat-cell>
-            </ng-container>
-
-            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-            <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-        </mat-table>
-    <!--</div>-->
-</div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
